Final Test for the overflow x issue

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -20,6 +20,10 @@ body {
     font-family: "Poppins", sans-serif;
     margin: 0;
     background: white;
+}
+
+.wrapper {
+    position: relative;
     overflow-x: hidden;
 }
 
